<resources>
    <string name="app_name" translatable="false">AdviceApp</string>
    <string name="saved_list">saved list</string>
    <string name="save_this_advice">Save this advice</string>
    <string name="next_one">next one</string>
    <string name="email_hint">Enter Your E-mail Address</string>
    <string name="reset_password">reset my password</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_up">Create an Account</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="hint_user_email">User Email</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="auth_phone_number">Auth through Phone Number</string>
    <string name="send_sms_code">send sms code</string>
    <string name="verify_to_sign_in">verify to sign in</string>
    <string name="enter_your_phone_number">Enter Phone Number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="login_with_a_google_account">Login with a Google account</string>
    <string name="login_with_a_facebook_account">Login with a Facebook account</string>
    <string name="login_with_a_twitter_account">Login with a Twitter account</string>
    <string name="error_input_email">Input your email</string>
    <string name="toast_sent_password">We sent a password reset email for your email address</string>
    <string name="login_successful">Login is successful</string>
    <string name="login_failed">Login Failed. If you do not have an account you can create one</string>
    <string name="login_google_successful">Login successful. Welcome!</string>
    <string name="login_google_failed">Something went wrong</string>
    <string name="login_facebook_successful">Login Facebook successful</string>
    <string name="login_facebook_failed">Login Facebook error</string>
    <string name="login_facebook_canceled">Login Facebook Canceled</string>
    <string name="login_twitter_successful">Success: </string>
    <string name="login_twitter_failed">Failed: </string>
    <string name="error_input_your_email">Input Your Email</string>
    <string name="error_input_your_password">Input Your Password</string>
    <string name="error_handling_advices">Error. Please try again</string>
    <string name="alert_dialog_logout" translatable="false">Logout?</string>
    <string name="alert_dialog_logout_successful">Sign out is successful</string>
    <string name="alert_dialog_logout_positive">Yes</string>
    <string name="alert_dialog_logout_negative">No</string>
    <string name="alert_dialog_logout_question">Do you want to sign out?</string>
    <string name="error_input_phonenumber">Input Your Phone Number</string>
    <string name="error_input_codereceived">Input the code you have received</string>
    <string name="toast_code_failed">The code you entered is incorrect</string>
    <string name="toast_phone_verification_successful">"PhoneAuth: "</string>
    <string name="toast_phone_verification_failed">Verification Failed</string>
    <string name="toast_phone_code_sent">"CodeSent: "</string>
    <string name="signup_successful">Your account has been created</string>
    <string name="error_input_an_email">Input an Email</string>
    <string name="error_input_an_password">Input a Password</string>
    <string name="error_input_an_user_name">Input an User Name</string>
    <string name="facebook_app_id" translatable="false">1182290422675256</string>
    <string name="fb_client_token" translatable="false">3610c188b0ed8122d62ac87d9e5e9b84</string>
    <string name="fab_new_advice">Create a new Advice</string>
    <string name="btn_new_advice">Save this Advice</string>
    <string name="tv_new_advice">Enter Your Advice Here</string>
    <string name="toast_new_advice">Your Advice was saved in the list</string>
    <string name="toast_update_advice">Your Advice was updated</string>
    <string name="ic_delete">Delete</string>
    <string name="toast_delete_advice">was deleted</string>
    <string name="dialog_delete_advice">Delete Advice?</string>
    <string name="dialog_update_advice">Update Advice?</string>
    <string name="dialog_delete_all_advices">Delete all saved Advices?</string>
    <string name="toast_delete_all">Deleted all saved advices</string>
    <string name="menu_delete_all">Deleted all saved advices</string>
    <string name="menu_sign_out" translatable="false">Sign out</string>
    <string name="btn_add_user_image">To select profile image, click on the picture</string>
    <string name="content_description_image_user">Profile Image</string>
    <string name="text_user_profile">User Profile</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="tv_user_name">User Name</string>
    <string name="toast_user_created">Welcome! User Created</string>
    <string name="toast_picture_uploaded">Your Profile Picture was uploaded</string>
    <string name="toast_username_uploaded">Your Username was uploaded</string>
    <string name="tv_change_user_name">click here to change your username</string>
    <string name="tv_change_user_image">click here to change your profile image</string>
    <string name="ic_hide_password">hide password</string>
    <string name="edit_new_username">New Username</string>
    <string name="apply_new_username">Apply New Username</string>
    <string name="tv_no_advices_yet">You don\'t have any saved Advices to show yet</string>
    <string name="btn_share_advice">Share Advice</string>
    <string name="tv_share" translatable="false">Let\'s Share Knowledge s2</string>
    <string name="btn_update_advice" translatable="false">Update</string>
    <string name="btn_confirm_update">Update</string>
    <string name="btn_cancel_update">Update</string>
    <string name="ic_update" translatable="false">Update</string>
</resources>