<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tvUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/text_user_profile"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivUserProfile"
        app:srcCompat="@drawable/calvin"
        android:layout_width="160dp"
        android:layout_height="198dp"
        android:layout_below="@id/tvUserProfile"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/content_description_image_user"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvChangeImageUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivUserProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_change_user_image"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChangeImageUser"
        android:gravity="center"
        android:text="@string/tv_user_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvChangeUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_change_user_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

</RelativeLayout>