<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.PhoneActivity">

    <EditText
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number"
        android:textAlignment="center"
        android:maxLength="13"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms_code"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <EditText
        android:id="@+id/tvPhoneVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enter_verification_code"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSms"/>

    <Button
        android:id="@+id/btnSmsVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_to_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneVerify" />

</androidx.constraintlayout.widget.ConstraintLayout>