<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivNewUser"
        android:layout_width="160dp"
        android:layout_height="198dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        app:srcCompat="@drawable/calvin"
        android:layout_below="@id/tvSignUp"
        android:clickable="true"
        android:contentDescription="@string/content_description_image_user"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvAddImageUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/btn_add_user_image"
        android:textColorHint="@color/white"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/ivNewUser"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_person_auth"
        android:textColor="@color/white"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:layout_below="@id/tvAddImageUser"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <ImageView
        android:id="@+id/icRedEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove_red_eye"
        android:layout_alignEnd="@+id/password"
        android:layout_below="@id/userEmail"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:tint="#e0e0e0" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />

</RelativeLayout>