<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tvUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/text_user_profile"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivUserProfile"
        app:srcCompat="@drawable/calvin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@id/tvUserProfile"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/content_description_image_user"
        android:focusable="true"
        app:shapeAppearance="@style/circle"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivUserProfile"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tv_user_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUserName"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="User Email"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnAddFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Add Friend"
        android:backgroundTint="@color/green"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/tvUserEmail" />

    <Button
        android:id="@+id/btnRefuseFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refuse Friend Request"
        android:backgroundTint="@color/red"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/btnAddFriend" />

</RelativeLayout>